# final_moc

./: README.md  code.txt  main.py  pyproject.toml
migration/: env.py
migration/versions/: 0f4c3da53c5e_added_slots_enrollment_table.py  44b49df7f01a_init.py  4718cba70bcb_added_role_and_user_role_table_removed_.py  a99837bd8412_added_users_table.py  cb73c4e76aaa_added_roles_column_to_users_table.py  ecf090259c56_removed_roles_column_from_users_table.py  f218adb25aec_added_moc_table.py  fa184fc73036_added_passed_at_col_to_enrollment_table.py
src/config/: settings.py
src/database/: session.py
src/dependencies/: auth_dependency.py  role_dependency.py
src/model/: __init__.py  enrollment_model.py  moc_model.py  role_model.py  slots_model.py  user_model.py  user_role_model.py
src/repository/: admin_repo.py  enrollment_repo.py  moc_repo.py  role_repo.py  slots_repo.py  user_repo.py  user_role_repo.py
src/router/: admin_router.py  enrollment_router.py  moc_router.py  slot_router.py  user_router.py
src/schema/: admin_schema.py  enrollment_schema.py  moc_schema.py  slot_schema.py  user_schema.py
src/service/: admin_service.py  enrollment_service.py  moc_service.py  slot_service.py  user_service.py
src/utils/: constants.py  custom_Exceptions.py  hash.py  jwt.py  logger.py  seed.py  seed_roles.py  seed_superadmin.py
