[project]
name = "moc"
version = "0.1.0"
description = ""
authors = [
    {name = "akanksha_lokhande",email = "akanksha.lokhande@coditas.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)"
]

[tool.poetry]
packages = [{include = "moc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
